# mexc-dca-bot

./: .env.example  .gitignore  README.md  config.yaml  install-systemd.sh  pyproject.toml
mexc_dca/: __main__.py  config.py  exchange.py  logger.py  notifier.py  scheduler.py
mexc_dca/strategy/: dca.py  grid.py  rangefade.py
